# lightdash_mcp

./: LICENSE  README.md  lightdash_client.py  pyproject.toml  requirements.txt  server.py
lightdash_mcp/: __init__.py  lightdash_client.py  server.py
lightdash_mcp/tools/: base_tool.py  create_dashboard_tile.py  dashboard_utils.py  delete_chart.py  delete_space.py  duplicate_dashboard.py  get_chart_details.py  get_dashboard_code.py  get_dashboard_tiles.py  get_sql_chart.py  list_dashboards.py  list_projects.py  list_spaces.py  rename_dashboard_tile.py  run_chart_query.py  run_dashboard_tiles.py  run_raw_query.py  update_chart.py  update_dashboard_filters.py  update_dashboard_tile.py  update_sql_chart.py  utils.py
tools/: __init__.py  create_chart.py  create_dashboard.py  create_space.py  dashboard_utils.py  delete_chart.py  delete_dashboard_tile.py  get_catalog.py  get_chart_details.py  get_custom_metrics.py  get_dashboard_tile_chart_config.py  get_explore_schema.py  get_metrics_catalog.py  get_project.py  list_charts.py  list_explores.py  run_chart_query.py  run_dashboard_chart.py  run_dashboard_tile.py  run_dashboard_tiles.py  run_metric_query.py  run_raw_query.py  search_charts.py  utils.py
